Refactor Cluedo game logic for clarity and encapsulation
Replaced affirmative method names with negative variants (e.g., `canSuggest` to `canNotSuggest`) for improved readability and consistency. Introduced a private method `buildMessage` to streamline notification message construction. Simplified and formatted several code blocks, eliminated redundancy, and utilized streams for cleaner collection manipulation.