@@ -26,13 +26,7 @@ import edu.ntnu.idi.idatt.boardgame.ui.dto.PlayerSetupDetails;
 import edu.ntnu.idi.idatt.boardgame.ui.util.LoggingNotification;
 import java.nio.file.Path;
 import java.security.SecureRandom;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Random;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import javafx.animation.PauseTransition;
@@ -46,10 +40,9 @@ import org.slf4j.LoggerFactory;
  */
 public final class CluedoController extends GameController<GridPos> {
 
-  /**
-   * Repository for saving and loading game state.
-   */
+  /** Repository for saving and loading game state. */
   private final GameStateRepository<CluedoGameStateDto> repo;
+
   private final CluedoBoard boardModel;
   private int stepsLeft = 0;
   private Suspect solutionSuspect;
@@ -66,10 +59,10 @@ public final class CluedoController extends GameController<GridPos> {
    * Constructs a CluedoController with the specified player details and game state repository.
    *
    * @param playerDetailsList List of player setup details. Can be null/empty for loading.
-   * @param repo              Repository for saving and loading game state.
+   * @param repo Repository for saving and loading game state.
    */
-  public CluedoController(List<PlayerSetupDetails> playerDetailsList,
-      GameStateRepository<CluedoGameStateDto> repo) {
+  public CluedoController(
+      List<PlayerSetupDetails> playerDetailsList, GameStateRepository<CluedoGameStateDto> repo) {
     super(new CluedoBoard(), new Dice(2));
     this.boardModel = (CluedoBoard) this.gameBoard;
     this.repo = Objects.requireNonNull(repo);
@@ -82,7 +75,7 @@ public final class CluedoController extends GameController<GridPos> {
       }
     }
 
-    initializeGame(playerDetailsList); // Calls our overridden setupPlayers
+    initializeGame(playerDetailsList);
 
     if (isNewGameSetup) {
       pickSolution();
@@ -91,7 +84,6 @@ public final class CluedoController extends GameController<GridPos> {
     }
     // For loading, observers are notified by loadGameState after state is fully restored.
   }
-
 
   @Override
   protected Map<Integer, Player<GridPos>> setupPlayers(List<PlayerSetupDetails> playerDetailsList) {
@@ -102,29 +94,28 @@ public final class CluedoController extends GameController<GridPos> {
       // This indicates a loading scenario.
       // Players will be populated by loadGameState.
       // CurrentPlayer will also be set by loadGameState.
-      return newPlayersMap; // Return empty map
+      return newPlayersMap;
     }
 
     AtomicInteger playerIdCounter = new AtomicInteger(1);
     for (PlayerSetupDetails detail : playerDetailsList) {
       int id = playerIdCounter.getAndIncrement();
       String name = detail.name();
-      Suspect suspect = detail.suspectIfCluedo().orElseThrow(
-          () -> new IllegalArgumentException("Suspect details missing for Cluedo player: " + name)
-      );
+      Suspect suspect =
+          detail
+              .suspectIfCluedo()
+              .orElseThrow(
+                  () ->
+                      new IllegalArgumentException(
+                          "Suspect details missing for Cluedo player: " + name));
       // Start position is nominal; actual placement is handled by gameBoard.addPlayersToStart
       CluedoPlayer player = new CluedoPlayer(id, name, suspect.colour(), new GridPos(0, 0));
       newPlayersMap.put(id, player);
       this.turnOrder.add(player);
     }
 
-    if (!this.turnOrder.isEmpty()) {
-      this.currentIndex = 0; // Reset for new game
-      this.currentPlayer = this.turnOrder.get(this.currentIndex);
-    } else { // This case should ideally not be hit if playerDetailsList was valid for a new game
-      throw new IllegalStateException(
-          "No players were created for Cluedo from non-empty playerDetailsList.");
-    }
+    this.currentIndex = 0; // Reset for new game
+    this.currentPlayer = this.turnOrder.get(this.currentIndex);
     return newPlayersMap;
   }
 
@@ -168,9 +159,9 @@ public final class CluedoController extends GameController<GridPos> {
       CluedoGameStateDto dto = repo.load(Path.of(path));
 
       CluedoBoard board = (CluedoBoard) this.gameBoard;
-      for (int r = 0; r < board.getBoardSize(); r++) {
-        for (int c = 0; c < board.getBoardSize(); c++) {
-          AbstractCluedoTile tile = board.getTileAtPosition(new GridPos(r, c));
+      for (int row = 0; row < board.getBoardSize(); row++) {
+        for (int col = 0; col < board.getBoardSize(); col++) {
+          AbstractCluedoTile tile = board.getTileAtPosition(new GridPos(row, col));
           if (tile != null && !tile.getPlayers().isEmpty()) {
             new ArrayList<>(tile.getPlayers()).forEach(tile::removePlayer);
           }
@@ -183,15 +174,14 @@ public final class CluedoController extends GameController<GridPos> {
       for (CluedoGameStateDto.PlayerState ps : dto.players) {
         PlayerColor playerColor = PlayerColor.valueOf(ps.colour);
         Suspect suspect = Suspect.from(playerColor);
-        // Actual name from Suspect might be better than "Player X" if details were stored
-        CluedoPlayer player = new CluedoPlayer(ps.id, suspect.getName(), playerColor,
-            new GridPos(ps.row, ps.col));
+        CluedoPlayer player =
+            new CluedoPlayer(ps.id, suspect.getName(), playerColor, new GridPos(ps.row, ps.col));
         loadedPlayers.put(ps.id, player);
-        this.turnOrder.add(player); // Rebuild turnOrder based on DTO's player list order
+        this.turnOrder.add(player);
       }
       this.players = loadedPlayers;
 
-      CluedoMapper.apply(dto, this); // This will set solution, cards, notes, currentPlayer etc.
+      CluedoMapper.apply(dto, this);
 
       // Ensure currentPlayer and currentIndex are correctly set after loading
       if (this.currentPlayer != null && this.turnOrder.contains(this.currentPlayer)) {
@@ -206,18 +196,7 @@ public final class CluedoController extends GameController<GridPos> {
         logger.error("Failed to set current player after load - turn order is empty.");
       }
 
-      String message = "Game state loaded.";
-      if (currentPlayer != null) {
-        if (phase == Phase.WAIT_ROLL) {
-          message += " " + currentPlayer.getName() + " to roll.";
-        } else if (phase == Phase.MOVING) {
-          message += " " + currentPlayer.getName() + " to move with " + stepsLeft + " steps left.";
-        } else {
-          message += " Current turn: " + currentPlayer.getName() + ". Phase: " + phase;
-        }
-      } else {
-        message += " No current player found after load.";
-      }
+      String message = buildMessage();
       notifyObservers(message);
     } catch (Exception e) {
       logger.error("Load failed: {}", e.getMessage(), e);
@@ -225,14 +204,20 @@ public final class CluedoController extends GameController<GridPos> {
     }
   }
 
-
-  /**
-   * Determines whether the game is in the "WAIT_ROLL" phase.
-   *
-   * @return true if the current game phase is "WAIT_ROLL", false otherwise.
-   */
-  public boolean isWaitingForRoll() {
-    return phase == Phase.WAIT_ROLL;
+  private String buildMessage() {
+    String message = "Game state loaded.";
+    if (currentPlayer != null) {
+      if (phase == Phase.WAIT_ROLL) {
+        message += " " + currentPlayer.getName() + " to roll.";
+      } else if (phase == Phase.MOVING) {
+        message += " " + currentPlayer.getName() + " to move with " + stepsLeft + " steps left.";
+      } else {
+        message += " Current turn: " + currentPlayer.getName() + ". Phase: " + phase;
+      }
+    } else {
+      message += " No current player found after load.";
+    }
+    return message;
   }
 
   public boolean isNotWaitingForRoll() {
@@ -260,45 +245,36 @@ public final class CluedoController extends GameController<GridPos> {
    *
    * @return true if the player can make a suggestion, false otherwise.
    */
-  public boolean canSuggest() {
+  public boolean canNotSuggest() {
     if (phase != Phase.IN_ROOM && !(phase == Phase.MOVING && stepsLeft == 0)) {
-      return false;
+      return true;
     }
     GridPos pos = currentPlayer.getPosition();
     AbstractCluedoTile tile = boardModel.getTileAtPosition(pos);
     if (tile instanceof RoomTile room) {
-      return !"Cluedo".equals(room.getRoomName());
+      return "Cluedo".equals(room.getRoomName());
     }
-    return false;
+    return true;
   }
 
   /**
-   * True if the current player is in the central “Cluedo” room and so may make an accusation.
+   * Determines if the current player is unable to make an accusation. A player cannot accuse unless
+   * they are in the "Cluedo" room during the correct phase of the game.
    *
-   * @return true if the player can make an accusation, false otherwise.
+   * @return true if the current player cannot accuse, false otherwise.
    */
-  public boolean canAccuse() {
+  public boolean canNotAccuse() {
     if (phase != Phase.IN_ROOM && !(phase == Phase.MOVING && stepsLeft == 0)) {
-      return false;
+      return true;
     }
     GridPos pos = currentPlayer.getPosition();
     AbstractCluedoTile tile = boardModel.getTileAtPosition(pos);
-    return tile instanceof RoomTile room && "Cluedo".equals(room.getRoomName());
+    return !(tile instanceof RoomTile room) || !"Cluedo".equals(room.getRoomName());
   }
 
   /**
-   * True if the current player is not in the central “Cluedo” room and so may not make an
-   * accusation.
-   *
-   * @return true if the player cannot make an accusation, false otherwise.
-   */
-  public boolean canNotAccuse() {
-    return !canAccuse();
-  }
-
-  /**
-   * Handles the action triggered when the roll dice button is pressed. Executes a
-   * {@link RollAction} for the current player.
+   * Handles the action triggered when the roll dice button is pressed. Executes a {@link
+   * RollAction} for the current player.
    */
   public void onRollButton() {
     if (phase != Phase.WAIT_ROLL) {
@@ -309,8 +285,8 @@ public final class CluedoController extends GameController<GridPos> {
   }
 
   /**
-   * Handles the action triggered when a tile on the game board is clicked. Executes a
-   * {@link MoveAction} for the current player towards the target position.
+   * Handles the action triggered when a tile on the game board is clicked. Executes a {@link
+   * MoveAction} for the current player towards the target position.
    *
    * @param target The {@link GridPos} of the clicked tile.
    */
@@ -323,15 +299,15 @@ public final class CluedoController extends GameController<GridPos> {
   }
 
   /**
-   * Handles the action triggered when the accuse button is pressed. Executes an
-   * {@link AccusationAction} with the provided suspect, weapon, and room.
+   * Handles the action triggered when the accuse button is pressed. Executes an {@link
+   * AccusationAction} with the provided suspect, weapon, and room.
    *
    * @param suspect The suspected character.
-   * @param weapon  The suspected weapon.
-   * @param room    The room where the crime is suspected to have occurred.
+   * @param weapon The suspected weapon.
+   * @param room The room where the crime is suspected to have occurred.
    */
   public void onAccuseButton(Suspect suspect, Weapon weapon, Room room) {
-    if (!canAccuse()) {
+    if (canNotAccuse()) {
       logger.warn("Accuse button clicked when accusation is not allowed (Phase: {}).", phase);
       LoggingNotification.warn("Cannot Accuse", "You must be in the 'Cluedo' room to accuse.");
       return;
@@ -340,18 +316,18 @@ public final class CluedoController extends GameController<GridPos> {
   }
 
   /**
-   * Handles the action triggered when the suggest button is pressed. Executes a
-   * {@link SuggestionAction} with the provided suspect, weapon, and room.
+   * Handles the action triggered when the suggest button is pressed. Executes a {@link
+   * SuggestionAction} with the provided suspect, weapon, and room.
    *
    * @param suspect The suspected character involved in the suggestion.
-   * @param weapon  The suspected weapon used in the suggestion.
-   * @param room    The room where the suggestion is being made.
+   * @param weapon The suspected weapon used in the suggestion.
+   * @param room The room where the suggestion is being made.
    */
   public void onSuggestButton(Suspect suspect, Weapon weapon, Room room) {
-    if (!canSuggest()) {
+    if (canNotSuggest()) {
       logger.warn("Suggest button clicked when suggestion is not allowed (Phase: {}).", phase);
-      LoggingNotification.warn("Cannot Suggest",
-          "You must be in a regular room to make a suggestion.");
+      LoggingNotification.warn(
+          "Cannot Suggest", "You must be in a regular room to make a suggestion.");
       return;
     }
     new SuggestionAction(this, suspect, weapon, room).execute();
@@ -392,7 +368,9 @@ public final class CluedoController extends GameController<GridPos> {
         phase = Phase.IN_ROOM;
         String roomName = ((RoomTile) boardModel.getTileAtPosition(target)).getRoomName();
         notifyObservers(
-            currentPlayer.getName() + " entered the " + roomName
+            currentPlayer.getName()
+                + " entered the "
+                + roomName
                 + ". Make a suggestion/accusation or end turn.");
       } else {
         endTurn();
@@ -447,8 +425,11 @@ public final class CluedoController extends GameController<GridPos> {
 
     if (playerToMove != null && playerToMove != currentPlayer) {
       boardModel.setPlayerPosition(playerToMove, currentPlayer.getPosition());
-      LoggingNotification.info("Player Moved",
-          suggestedSuspect.getName() + " has been moved to the " + suggestedRoom.getName()
+      LoggingNotification.info(
+          "Player Moved",
+          suggestedSuspect.getName()
+              + " has been moved to the "
+              + suggestedRoom.getName()
               + " for the suggestion.");
     }
 
@@ -477,9 +458,17 @@ public final class CluedoController extends GameController<GridPos> {
         Card shownCard = heldMatchingCards.get(rng.nextInt(heldMatchingCards.size()));
         notifyObservers(
             currentPlayer.getName()
-                + " suggested " + suggestedSuspect.getName() + " in the "
-                + suggestedRoom.getName() + " with the " + suggestedWeapon.getName() + ". "
-                + respondent.getName() + " disproved by showing \"" + shownCard.getName() + ".\"");
+                + " suggested "
+                + suggestedSuspect.getName()
+                + " in the "
+                + suggestedRoom.getName()
+                + " with the "
+                + suggestedWeapon.getName()
+                + ". "
+                + respondent.getName()
+                + " disproved by showing \""
+                + shownCard.getName()
+                + ".\"");
         disproved = true;
         break;
       }
@@ -488,8 +477,12 @@ public final class CluedoController extends GameController<GridPos> {
     if (!disproved) {
       notifyObservers(
           currentPlayer.getName()
-              + " suggested " + suggestedSuspect.getName() + " in the "
-              + suggestedRoom.getName() + " with the " + suggestedWeapon.getName()
+              + " suggested "
+              + suggestedSuspect.getName()
+              + " in the "
+              + suggestedRoom.getName()
+              + " with the "
+              + suggestedWeapon.getName()
               + ". No one could disprove the suggestion.");
     }
   }
@@ -498,8 +491,8 @@ public final class CluedoController extends GameController<GridPos> {
    * Allows the current player to make an accusation.
    *
    * @param suspect The suspected character.
-   * @param weapon  The suspected weapon.
-   * @param room    The room where the crime is suspected to have occurred.
+   * @param weapon The suspected weapon.
+   * @param room The room where the crime is suspected to have occurred.
    */
   public void makeAccusation(Suspect suspect, Weapon weapon, Room room) {
     if (suspect == null || weapon == null || room == null) {
@@ -507,15 +500,26 @@ public final class CluedoController extends GameController<GridPos> {
     }
 
     if (suspect == solutionSuspect && weapon == solutionWeapon && room == solutionRoom) {
-      notifyObservers(currentPlayer.getName() + " wins! The solution was indeed "
-          + solutionSuspect.getName() + " with the " + solutionWeapon.getName() + " in the "
-          + solutionRoom.getName() + ".");
+      notifyObservers(
+          currentPlayer.getName()
+              + " wins! The solution was indeed "
+              + solutionSuspect.getName()
+              + " with the "
+              + solutionWeapon.getName()
+              + " in the "
+              + solutionRoom.getName()
+              + ".");
       onGameFinish();
     } else {
       notifyObservers(
           currentPlayer.getName()
-              + " accused " + suspect.getName() + " with " + weapon.getName()
-              + " in " + room.getName() + ". This is WRONG!");
+              + " accused "
+              + suspect.getName()
+              + " with "
+              + weapon.getName()
+              + " in "
+              + room.getName()
+              + ". This is WRONG!");
       eliminateCurrentPlayer(currentPlayer);
 
       if (isGameOver()) {
@@ -552,7 +556,7 @@ public final class CluedoController extends GameController<GridPos> {
     }
 
     if (turnOrder.size() == 1 && !isGameOver()) {
-      this.currentPlayer = turnOrder.get(0);
+      this.currentPlayer = turnOrder.getFirst();
       notifyObservers(
           this.currentPlayer.getName() + " is the last one remaining and wins by default!");
       onGameFinish();
@@ -569,7 +573,7 @@ public final class CluedoController extends GameController<GridPos> {
    * the method returns null.
    *
    * @return The {@link Room} object representing the current player's location if they are in a
-   * room, or null if the player is not in a room.
+   *     room, or null if the player is not in a room.
    */
   public Room getRoomOfCurrentPlayer() {
     String roomName = getRoomOfCurrentPlayerName();
@@ -596,9 +600,7 @@ public final class CluedoController extends GameController<GridPos> {
     return null;
   }
 
-  /**
-   * Called when this player’s movement finishes. Advances turn.
-   */
+  /** Called when this player’s movement finishes. Advances turn. */
   public void endTurn() {
     if (phase == Phase.TURN_OVER) {
       return;
@@ -608,33 +610,26 @@ public final class CluedoController extends GameController<GridPos> {
   }
 
   private void pickSolution() {
-    var localSuspectList = Cards.shuffledSuspects(rng);
-    solutionSuspect = localSuspectList.remove(0);
-    var localWeaponList = Cards.shuffledWeapons(rng);
-    solutionWeapon = localWeaponList.remove(0);
-    var localRoomList = Cards.shuffledRooms(rng);
-    solutionRoom = localRoomList.remove(0);
-    logger.info("Solution picked: {} with {} in {}", solutionSuspect.getName(),
-        solutionWeapon.getName(), solutionRoom.getName());
+    List<Suspect> localSuspectList = Cards.shuffledSuspects(rng);
+    solutionSuspect = localSuspectList.removeFirst();
+    List<Weapon> localWeaponList = Cards.shuffledWeapons(rng);
+    solutionWeapon = localWeaponList.removeFirst();
+    List<Room> localRoomList = Cards.shuffledRooms(rng);
+    solutionRoom = localRoomList.removeFirst();
+    logger.info(
+        "Solution picked: {} with {} in {}",
+        solutionSuspect.getName(),
+        solutionWeapon.getName(),
+        solutionRoom.getName());
   }
 
   private void dealRemainingCards() {
     List<Card> deck = new ArrayList<>();
-    for (Suspect s : Suspect.values()) {
-      if (s != solutionSuspect) {
-        deck.add(s);
-      }
-    }
-    for (Weapon w : Weapon.values()) {
-      if (w != solutionWeapon) {
-        deck.add(w);
-      }
-    }
-    for (Room r : Room.values()) {
-      if (r != solutionRoom) {
-        deck.add(r);
-      }
-    }
+    Arrays.stream(Suspect.values())
+        .filter(suspect -> suspect != solutionSuspect)
+        .forEach(deck::add);
+    Arrays.stream(Weapon.values()).filter(weapon -> weapon != solutionWeapon).forEach(deck::add);
+    Arrays.stream(Room.values()).filter(room -> room != solutionRoom).forEach(deck::add);
 
     Collections.shuffle(deck, rng);
 
@@ -676,7 +671,8 @@ public final class CluedoController extends GameController<GridPos> {
       logger.warn(
           "setCurrentPlayer called with a player not found in turnOrder or turnOrder is "
               + "inconsistent. Player: {}, TurnOrder size: {}",
-          currentPlayer.getName(), this.turnOrder.size());
+          currentPlayer.getName(),
+          this.turnOrder.size());
       // Attempt to find by ID if names differ, or re-evaluate turnOrder setup during load
       boolean found = false;
       for (int i = 0; i < this.turnOrder.size(); i++) {
@@ -687,7 +683,8 @@ public final class CluedoController extends GameController<GridPos> {
         }
       }
       if (!found && !this.turnOrder.isEmpty()) {
-        logger.warn("Fallback: Setting currentIndex to 0 as player ID {} not in turnOrder.",
+        logger.warn(
+            "Fallback: Setting currentIndex to 0 as player ID {} not in turnOrder.",
             currentPlayer.getId());
         this.currentIndex = 0; // Fallback, may need adjustment if DTO stores turn order explicitly
       } else if (this.turnOrder.isEmpty()) {
@@ -763,14 +760,17 @@ public final class CluedoController extends GameController<GridPos> {
    * Sets the solution for the game, including the suspect, weapon, and room.
    *
    * @param suspect The {@link Suspect} object representing the solution suspect.
-   * @param weapon  The {@link Weapon} object representing the solution weapon.
-   * @param room    The {@link Room} object representing the solution room.
+   * @param weapon The {@link Weapon} object representing the solution weapon.
+   * @param room The {@link Room} object representing the solution room.
    */
   public void setSolution(Suspect suspect, Weapon weapon, Room room) {
     this.solutionSuspect = suspect;
     this.solutionWeapon = weapon;
     this.solutionRoom = room;
-    logger.info("Solution loaded: {} with {} in {}",
-        solutionSuspect.getName(), solutionWeapon.getName(), solutionRoom.getName());
+    logger.info(
+        "Solution loaded: {} with {} in {}",
+        solutionSuspect.getName(),
+        solutionWeapon.getName(),
+        solutionRoom.getName());
   }
 }
